[package]
name = "rust-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
slint = "1.3.2"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
phf = { version = "0.11" , features = ["macros"] }
indextree = "4.6.0"

[build-dependencies]
slint-build = "1.3.0"


[[bin]]
name = "rust-game"
path = "main.rs"
