[package]
name = "rust-game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
rand_distr = "0.4.0"
slint = "1.3.2"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
phf = { version = "0.11" , features = ["macros"] }
petgraph  = "0.6.4"
priority-queue = "1.4.0"
strum = "0.26"
strum_macros = "0.26"

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[build-dependencies]
slint-build = "1.3.0"


[[bin]]
name = "rust-game"
path = "main.rs"
